--- a/app/templates/currentWeatherbyCoord.html
+++ b/app/templates/currentWeatherbyCoord.html
@@ -1,5 +1,9 @@
 <ion-view view-title="Weather by Current Coordinates" id="currentWeatherbyCity">
     <ion-content>
+       
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+            </ion-refresher>
+        
         <div class="list card" ng-switch="weatherData.cod">
             <div ng-switch-when="200">
                 <div class="centered">
